Solving overflow issue

--- a/desafio-02/css/style.css
+++ b/desafio-02/css/style.css
@@ -27,10 +27,6 @@ html {
   margin: 129px 0;
 }
 
-.list-images:first-child {
-  margin-left: 19px;
-}
-
 .box {
   display: flex;
   flex-shrink: 1;
